; ModuleID = '/home/carl/AnghaBench/php-src/ext/date/extr_php_date.c_date_object_get_debug_info_timezone.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/date/extr_php_date.c_date_object_get_debug_info_timezone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [14 x i8] c"timezone_type\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"timezone\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @date_object_get_debug_info_timezone to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @date_object_get_debug_info_timezone(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call %struct.TYPE_4__* @php_timezone_obj_from_obj(i32* %9)
  store %struct.TYPE_4__* %10, %struct.TYPE_4__** %8, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = call i32* @zend_std_get_properties(i32* %11)
  store i32* %12, i32** %6, align 8
  %13 = load i32*, i32** %4, align 8
  store i32 1, i32* %13, align 4
  %14 = load i32*, i32** %6, align 8
  %15 = call i32* @zend_array_dup(i32* %14)
  store i32* %15, i32** %5, align 8
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @ZVAL_LONG(i32* %7, i32 %18)
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @zend_hash_str_update(i32* %20, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 13, i32* %7)
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %23 = call i32 @php_timezone_to_string(%struct.TYPE_4__* %22, i32* %7)
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @zend_hash_str_update(i32* %24, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 8, i32* %7)
  %26 = load i32*, i32** %5, align 8
  ret i32* %26
}

declare dso_local %struct.TYPE_4__* @php_timezone_obj_from_obj(i32*) #1

declare dso_local i32* @zend_std_get_properties(i32*) #1

declare dso_local i32* @zend_array_dup(i32*) #1

declare dso_local i32 @ZVAL_LONG(i32*, i32) #1

declare dso_local i32 @zend_hash_str_update(i32*, i8*, i32, i32*) #1

declare dso_local i32 @php_timezone_to_string(%struct.TYPE_4__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
